--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     },
     "devDependencies": {
         "axios": "^0.18",
-        "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
+        "laravel-mix-tailwind": "^0.1.0",
         "lodash": "^4.17.5",
-        "popper.js": "^1.12",
+        "tailwindcss": "^0.6.6",
         "vue": "^2.5.7"
     }
 }
